.antlr/CedarParser.java
// Generated from /Users/ian/cedar-antlr-grammar/CedarParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CedarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, THEN=2, ELSE=3, LIKE=4, IN=5, HAS=6, WHEN=7, UNLESS=8, PERMIT=9, 
		FORBID=10, QPRINCIPAL=11, PRINCIPAL=12, ACTION=13, QRESOURCE=14, RESOURCE=15, 
		CONTEXT=16, IS=17, NAMESPACE=18, DOUBLEEQUAL=19, DOUBLEPIPE=20, DOUBLEAMP=21, 
		SEMICOLON=22, ASTERIX=23, PLUS=24, MINUS=25, EXCLAMATION=26, PERIOD=27, 
		ATSYMB=28, OPENBRKT=29, CLOSEBRKT=30, OPENPAREN=31, CLOSEPAREN=32, OPENBRACE=33, 
		CLOSEBRACE=34, COMMA=35, COLON=36, RELOP=37, STR=38, PAT=39, LITERAL=40, 
		BOOL=41, INT=42, IDENT=43, VAR=44, WHITESPC=45, COMMENT=46;
	public static final int
		RULE_policyset = 0, RULE_policy = 1, RULE_effect = 2, RULE_scope = 3, 
		RULE_principal = 4, RULE_action = 5, RULE_resource = 6, RULE_condition = 7, 
		RULE_expr = 8, RULE_or = 9, RULE_and = 10, RULE_relation = 11, RULE_add = 12, 
		RULE_mult = 13, RULE_unary = 14, RULE_member = 15, RULE_annotation = 16, 
		RULE_access = 17, RULE_primary = 18, RULE_path = 19, RULE_entity = 20, 
		RULE_entList = 21, RULE_exprList = 22, RULE_extFun = 23, RULE_recInits = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"policyset", "policy", "effect", "scope", "principal", "action", "resource", 
			"condition", "expr", "or", "and", "relation", "add", "mult", "unary", 
			"member", "annotation", "access", "primary", "path", "entity", "entList", 
			"exprList", "extFun", "recInits"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'then'", "'else'", "'like'", "'in'", "'has'", "'when'", 
			"'unless'", "'permit'", "'forbid'", "'?principal'", "'principal'", "'action'", 
			"'?resource'", "'resource'", "'context'", "'is'", "'::'", "'=='", "'||'", 
			"'&&'", "';'", "'*'", "'+'", "'-'", "'!'", "'.'", "'@'", "'['", "']'", 
			"'('", "')'", "'{'", "'}'", "','", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "THEN", "ELSE", "LIKE", "IN", "HAS", "WHEN", "UNLESS", "PERMIT", 
			"FORBID", "QPRINCIPAL", "PRINCIPAL", "ACTION", "QRESOURCE", "RESOURCE", 
			"CONTEXT", "IS", "NAMESPACE", "DOUBLEEQUAL", "DOUBLEPIPE", "DOUBLEAMP", 
			"SEMICOLON", "ASTERIX", "PLUS", "MINUS", "EXCLAMATION", "PERIOD", "ATSYMB", 
			"OPENBRKT", "CLOSEBRKT", "OPENPAREN", "CLOSEPAREN", "OPENBRACE", "CLOSEBRACE", 
			"COMMA", "COLON", "RELOP", "STR", "PAT", "LITERAL", "BOOL", "INT", "IDENT", 
			"VAR", "WHITESPC", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CedarParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CedarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PolicysetContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CedarParser.EOF, 0); }
		public List<PolicyContext> policy() {
			return getRuleContexts(PolicyContext.class);
		}
		public PolicyContext policy(int i) {
			return getRuleContext(PolicyContext.class,i);
		}
		public PolicysetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_policyset; }
	}

	public final PolicysetContext policyset() throws RecognitionException {
		PolicysetContext _localctx = new PolicysetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_policyset);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				policy();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 268436992L) != 0) );
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PolicyContext extends ParserRuleContext {
		public EffectContext effect() {
			return getRuleContext(EffectContext.class,0);
		}
		public TerminalNode OPENPAREN() { return getToken(CedarParser.OPENPAREN, 0); }
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public TerminalNode CLOSEPAREN() { return getToken(CedarParser.CLOSEPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(CedarParser.SEMICOLON, 0); }
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public PolicyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_policy; }
	}

	public final PolicyContext policy() throws RecognitionException {
		PolicyContext _localctx = new PolicyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_policy);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ATSYMB) {
				{
				{
				setState(57);
				annotation();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			effect();
			setState(64);
			match(OPENPAREN);
			setState(65);
			scope();
			setState(66);
			match(CLOSEPAREN);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHEN || _la==UNLESS) {
				{
				{
				setState(67);
				condition();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EffectContext extends ParserRuleContext {
		public TerminalNode PERMIT() { return getToken(CedarParser.PERMIT, 0); }
		public TerminalNode FORBID() { return getToken(CedarParser.FORBID, 0); }
		public EffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_effect; }
	}

	public final EffectContext effect() throws RecognitionException {
		EffectContext _localctx = new EffectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_effect);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if ( !(_la==PERMIT || _la==FORBID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScopeContext extends ParserRuleContext {
		public PrincipalContext principal() {
			return getRuleContext(PrincipalContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(CedarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CedarParser.COMMA, i);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public ResourceContext resource() {
			return getRuleContext(ResourceContext.class,0);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_scope);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			principal();
			setState(78);
			match(COMMA);
			setState(79);
			action();
			setState(80);
			match(COMMA);
			setState(81);
			resource();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrincipalContext extends ParserRuleContext {
		public TerminalNode PRINCIPAL() { return getToken(CedarParser.PRINCIPAL, 0); }
		public TerminalNode DOUBLEEQUAL() { return getToken(CedarParser.DOUBLEEQUAL, 0); }
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public TerminalNode QPRINCIPAL() { return getToken(CedarParser.QPRINCIPAL, 0); }
		public TerminalNode IS() { return getToken(CedarParser.IS, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public TerminalNode IN() { return getToken(CedarParser.IN, 0); }
		public PrincipalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_principal; }
	}

	public final PrincipalContext principal() throws RecognitionException {
		PrincipalContext _localctx = new PrincipalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_principal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(PRINCIPAL);
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IN:
			case IS:
			case COMMA:
				{
				{
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IS) {
					{
					setState(84);
					match(IS);
					setState(85);
					path();
					}
				}

				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IN) {
					{
					setState(88);
					match(IN);
					setState(91);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case IDENT:
						{
						setState(89);
						entity();
						}
						break;
					case QPRINCIPAL:
						{
						setState(90);
						match(QPRINCIPAL);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}

				}
				}
				break;
			case DOUBLEEQUAL:
				{
				{
				setState(95);
				match(DOUBLEEQUAL);
				setState(98);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENT:
					{
					setState(96);
					entity();
					}
					break;
				case QPRINCIPAL:
					{
					setState(97);
					match(QPRINCIPAL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActionContext extends ParserRuleContext {
		public TerminalNode ACTION() { return getToken(CedarParser.ACTION, 0); }
		public TerminalNode DOUBLEEQUAL() { return getToken(CedarParser.DOUBLEEQUAL, 0); }
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public TerminalNode IN() { return getToken(CedarParser.IN, 0); }
		public TerminalNode OPENBRKT() { return getToken(CedarParser.OPENBRKT, 0); }
		public EntListContext entList() {
			return getRuleContext(EntListContext.class,0);
		}
		public TerminalNode CLOSEBRKT() { return getToken(CedarParser.CLOSEBRKT, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_action);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(ACTION);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IN || _la==DOUBLEEQUAL) {
				{
				setState(113);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DOUBLEEQUAL:
					{
					setState(103);
					match(DOUBLEEQUAL);
					setState(104);
					entity();
					}
					break;
				case IN:
					{
					setState(105);
					match(IN);
					setState(111);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case OPENBRKT:
						{
						setState(106);
						match(OPENBRKT);
						setState(107);
						entList();
						setState(108);
						match(CLOSEBRKT);
						}
						break;
					case IDENT:
						{
						setState(110);
						entity();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResourceContext extends ParserRuleContext {
		public TerminalNode RESOURCE() { return getToken(CedarParser.RESOURCE, 0); }
		public TerminalNode DOUBLEEQUAL() { return getToken(CedarParser.DOUBLEEQUAL, 0); }
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public TerminalNode QRESOURCE() { return getToken(CedarParser.QRESOURCE, 0); }
		public TerminalNode IS() { return getToken(CedarParser.IS, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public TerminalNode IN() { return getToken(CedarParser.IN, 0); }
		public ResourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource; }
	}

	public final ResourceContext resource() throws RecognitionException {
		ResourceContext _localctx = new ResourceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_resource);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(RESOURCE);
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IN:
			case IS:
			case CLOSEPAREN:
				{
				{
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IS) {
					{
					setState(118);
					match(IS);
					setState(119);
					path();
					}
				}

				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IN) {
					{
					setState(122);
					match(IN);
					setState(125);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case IDENT:
						{
						setState(123);
						entity();
						}
						break;
					case QRESOURCE:
						{
						setState(124);
						match(QRESOURCE);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}

				}
				}
				break;
			case DOUBLEEQUAL:
				{
				{
				setState(129);
				match(DOUBLEEQUAL);
				setState(132);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENT:
					{
					setState(130);
					entity();
					}
					break;
				case QRESOURCE:
					{
					setState(131);
					match(QRESOURCE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public TerminalNode OPENBRACE() { return getToken(CedarParser.OPENBRACE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CLOSEBRACE() { return getToken(CedarParser.CLOSEBRACE, 0); }
		public TerminalNode WHEN() { return getToken(CedarParser.WHEN, 0); }
		public TerminalNode UNLESS() { return getToken(CedarParser.UNLESS, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if ( !(_la==WHEN || _la==UNLESS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(137);
			match(OPENBRACE);
			setState(138);
			expr();
			setState(139);
			match(CLOSEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public TerminalNode IF() { return getToken(CedarParser.IF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode THEN() { return getToken(CedarParser.THEN, 0); }
		public TerminalNode ELSE() { return getToken(CedarParser.ELSE, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expr);
		try {
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MINUS:
			case EXCLAMATION:
			case OPENBRKT:
			case OPENPAREN:
			case OPENBRACE:
			case LITERAL:
			case IDENT:
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				or();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(IF);
				setState(143);
				expr();
				setState(144);
				match(THEN);
				setState(145);
				expr();
				setState(146);
				match(ELSE);
				setState(147);
				expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrContext extends ParserRuleContext {
		public List<AndContext> and() {
			return getRuleContexts(AndContext.class);
		}
		public AndContext and(int i) {
			return getRuleContext(AndContext.class,i);
		}
		public List<TerminalNode> DOUBLEPIPE() { return getTokens(CedarParser.DOUBLEPIPE); }
		public TerminalNode DOUBLEPIPE(int i) {
			return getToken(CedarParser.DOUBLEPIPE, i);
		}
		public OrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or; }
	}

	public final OrContext or() throws RecognitionException {
		OrContext _localctx = new OrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_or);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			and();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOUBLEPIPE) {
				{
				{
				setState(152);
				match(DOUBLEPIPE);
				setState(153);
				and();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AndContext extends ParserRuleContext {
		public List<RelationContext> relation() {
			return getRuleContexts(RelationContext.class);
		}
		public RelationContext relation(int i) {
			return getRuleContext(RelationContext.class,i);
		}
		public List<TerminalNode> DOUBLEAMP() { return getTokens(CedarParser.DOUBLEAMP); }
		public TerminalNode DOUBLEAMP(int i) {
			return getToken(CedarParser.DOUBLEAMP, i);
		}
		public AndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and; }
	}

	public final AndContext and() throws RecognitionException {
		AndContext _localctx = new AndContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_and);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			relation();
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOUBLEAMP) {
				{
				{
				setState(160);
				match(DOUBLEAMP);
				setState(161);
				relation();
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationContext extends ParserRuleContext {
		public List<AddContext> add() {
			return getRuleContexts(AddContext.class);
		}
		public AddContext add(int i) {
			return getRuleContext(AddContext.class,i);
		}
		public TerminalNode RELOP() { return getToken(CedarParser.RELOP, 0); }
		public TerminalNode HAS() { return getToken(CedarParser.HAS, 0); }
		public TerminalNode IDENT() { return getToken(CedarParser.IDENT, 0); }
		public TerminalNode STR() { return getToken(CedarParser.STR, 0); }
		public TerminalNode LIKE() { return getToken(CedarParser.LIKE, 0); }
		public TerminalNode PAT() { return getToken(CedarParser.PAT, 0); }
		public TerminalNode IS() { return getToken(CedarParser.IS, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public TerminalNode IN() { return getToken(CedarParser.IN, 0); }
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_relation);
		int _la;
		try {
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				add();
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RELOP) {
					{
					setState(168);
					match(RELOP);
					setState(169);
					add();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(172);
				add();
				setState(173);
				match(HAS);
				setState(174);
				_la = _input.LA(1);
				if ( !(_la==STR || _la==IDENT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(176);
				add();
				setState(177);
				match(LIKE);
				setState(178);
				match(PAT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(180);
				add();
				setState(181);
				match(IS);
				setState(182);
				path();
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IN) {
					{
					setState(183);
					match(IN);
					setState(184);
					add();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AddContext extends ParserRuleContext {
		public List<MultContext> mult() {
			return getRuleContexts(MultContext.class);
		}
		public MultContext mult(int i) {
			return getRuleContext(MultContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(CedarParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(CedarParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(CedarParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(CedarParser.MINUS, i);
		}
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_add);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			mult();
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				{
				setState(190);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(191);
				mult();
				}
				}
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultContext extends ParserRuleContext {
		public List<UnaryContext> unary() {
			return getRuleContexts(UnaryContext.class);
		}
		public UnaryContext unary(int i) {
			return getRuleContext(UnaryContext.class,i);
		}
		public List<TerminalNode> ASTERIX() { return getTokens(CedarParser.ASTERIX); }
		public TerminalNode ASTERIX(int i) {
			return getToken(CedarParser.ASTERIX, i);
		}
		public MultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mult; }
	}

	public final MultContext mult() throws RecognitionException {
		MultContext _localctx = new MultContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_mult);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			unary();
			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ASTERIX) {
				{
				{
				setState(198);
				match(ASTERIX);
				setState(199);
				unary();
				}
				}
				setState(204);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
